# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -4,20 +4,18 @@ import { container } from "tsyringe";
 import { AuthenticateUserUseCase } from "./AuthenticateUserUseCase";
 
 class AuthenticateUserController {
-    async handle(req: Request, res: Response): Promise<Response> {
-        const { email, password } = req.body;
+  async handle(req: Request, res: Response): Promise<Response> {
+    const { email, password } = req.body;
 
-        const authenticateUserUseCase = container.resolve(
-            AuthenticateUserUseCase
-        );
+    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
 
-        const { user, token } = await authenticateUserUseCase.execute({
-            email,
-            password,
-        });
+    const { user, token } = await authenticateUserUseCase.execute({
+      email,
+      password,
+    });
 
-        return res.json({ user, token });
-    }
+    return res.json({ user, token });
+  }
 }
 
 export { AuthenticateUserController };
