# src/swagger.json
@@ -1,142 +1,265 @@
 {
-    "swagger": "2.0",
-    "info" : {
-        "title": "RentalX Documentation",
-        "description": "This is an API for Car Rent",
-        "version": "1.0.0",
-        "contact": {
-            "name": "Subaru Sakaguchi",
-            "email": "subarusakaguchi@yahoo.com.br"
-        }
-    },
-    "paths": {
-        "/categories" : {
-            "post": {
-                "tags": ["Category"],
-                "summary": "Create a Category",
-                "description": "Create a new Category for Cars",
-                "consumes": ["application/json"],
-                "produces": ["application/json"],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/category"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "500": {
-                        "description": "Category Already Exists"
+  "swagger": "2.0",
+  "info" : {
+    "title": "RentalX Documentation",
+    "description": "This is an API for Car Rent",
+    "version": "1.0.0",
+    "contact": {
+        "name": "Subaru Sakaguchi",
+        "email": "subarusakaguchi@yahoo.com.br"
+    }
+  },
+  "paths": {
+    "/categories" : {
+        "post": {
+            "tags": ["Category"],
+            "summary": "Create a Category",
+            "description": "Create a new Category for Cars",
+            "security": [
+              {"Bearer": []}
+            ],
+            "consumes": ["application/json"],
+            "produces": ["application/json"],
+            "parameters": [
+                {
+                    "in": "body",
+                    "name": "body",
+                    "required": true,
+                    "schema": {
+                        "$ref": "#/definitions/category"
                     }
                 }
-            },
-            "get": {
-                "tags": ["Category"],
-                "summary": "List categories",
-                "description": "List all categories in the application",
-                "produces": ["application/json"],
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "schema": {
-                            "type": "array",
-                            "itens": {
-                                "$ref": "#/definitions/category"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/categories/import": {
-            "post": {
-                "tags": ["Category"],
-                "summary": "Create categories from a csv file",
-                "description": "Create new categories based on a csv file, if it already does not exists",
-                "consumes": ["multipart/form-data"],
-                "parameters": [
-                    {
-                        "in": "formData",
-                        "name": "file",
-                        "description": "File to be uploaded, in csv format",
-                        "type": "file",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    }
-                }
-            }
-        },
-        "/specifications": {
-            "post": {
-                "tags": ["Specification"],
-                "summary": "Create a specification",
-                "description": "Create a new specification if it already does not exists",
-                "consumes": ["application/json"],
-                "produces": ["application/json"],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/specification"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "500": {
-                        "description": "Specification already exists"
-                    }
+            ],
+            "responses": {
+                "201": {
+                    "description": "Created"
+                },
+                "500": {
+                    "description": "Category Already Exists"
                 }
             }
         }
     },
-    "servers": [
-        {
-            "url": "http://localhost:5555/api-docs"
-        }
-    ],
-    "definitions": {
-        "category": {
-            "type": "object",
-            "required": ["name", "description"],
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "example": "Sedan"
-                },
-                "description": {
-                    "type": "string",
-                    "example": "Carro com o porta malas mais amplo"
-                }
-            }
-        },
-        "specification": {
-            "type": "object",
-            "requiered": ["name", "description"],
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "example": "Câmbio automático"
-                },
-                "description": {
-                    "type": "string",
-                    "example": "Carro com sistema de câmbio automático, ou seja, sem uso da embreagem"
+    "/categories/available": {
+      "get": {
+        "tags": ["Category"],
+        "summary": "List categories",
+        "description": "List all categories in the application",
+        "produces": ["application/json"],
+        "responses": {
+            "200": {
+                "description": "successful operation",
+                "schema": {
+                    "type": "array",
+                    "itens": {
+                        "$ref": "#/definitions/category"
+                    }
                 }
             }
         }
     }
+    },
+    "/categories/import": {
+        "post": {
+            "tags": ["Category"],
+            "summary": "Create categories from a csv file",
+            "description": "Create new categories based on a csv file, if it already does not exists",
+            "security": [
+              {"Bearer": []}
+            ],
+            "consumes": ["multipart/form-data"],
+            "parameters": [
+                {
+                    "in": "formData",
+                    "name": "file",
+                    "description": "File to be uploaded, in csv format",
+                    "type": "file",
+                    "required": true
+                }
+            ],
+            "responses": {
+                "201": {
+                    "description": "Created"
+                }
+            }
+        }
+    },
+    "/specifications": {
+        "post": {
+            "tags": ["Specification"],
+            "summary": "Create a specification",
+            "description": "Create a new specification if it already does not exists",
+            "security": [
+              {"Bearer": []}
+            ],
+            "consumes": ["application/json"],
+            "produces": ["application/json"],
+            "parameters": [
+                {
+                    "in": "body",
+                    "name": "body",
+                    "required": true,
+                    "schema": {
+                        "$ref": "#/definitions/specification"
+                    }
+                }
+            ],
+            "responses": {
+                "201": {
+                    "description": "Created"
+                },
+                "500": {
+                    "description": "Specification already exists"
+                }
+            }
+        }
+    },
+    "/cars": {
+      "post": {
+        "tags": ["Cars"],
+        "summary": "Create a new Car",
+        "description": "Create a new car for rent",
+        "security": [
+          {"Bearer": []}
+        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+            {
+                "in": "body",
+                "name": "body",
+                "required": true,
+                "schema": {
+                    "$ref": "#/definitions/car"
+                }
+            }
+        ],
+        "responses": {
+            "201": {
+                "description": "Created"
+            },
+            "400": {
+                "description": "Car Already Exists"
+            }
+        }
+    }
+    },
+    "/session": {
+      "post": {
+        "tags": ["Session"],
+        "summary": "Route to create a session",
+        "description": "Used for Login, and maintain the users info active to execute certain actions",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+                "$ref": "#/definitions/session"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Email or Password incorrect"
+          }
+        }
+      }
+    }
+  },
+  "servers": [
+      {
+          "url": "http://localhost:5555/api-docs"
+      }
+  ],
+  "definitions": {
+      "category": {
+        "type": "object",
+        "required": ["name", "description"],
+        "properties": {
+          "name": {
+              "type": "string",
+              "example": "SUV"
+          },
+          "description": {
+              "type": "string",
+              "example": "Carro grande"
+          }
+        }
+      },
+      "specification": {
+        "type": "object",
+        "required": ["name", "description"],
+        "properties": {
+          "name": {
+              "type": "string",
+              "example": "Câmbio automático"
+          },
+          "description": {
+              "type": "string",
+              "example": "Carro com sistema de câmbio automático, ou seja, sem uso da embreagem"
+          }
+        }
+      },
+      "session": {
+        "type": "object",
+        "required": ["email", "password"],
+        "properties": {
+          "email": {
+            "type": "string",
+            "example": "admin@rentx.com"
+          },
+          "password": {
+            "type": "string",
+            "example": "admin123"
+          }
+        }
+      },
+      "car" : {
+        "type": "object",
+        "required": ["name", "description", "brand", "license_plate", "fine_amount", "daily_rate", "category_id"],
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "Car test"
+          },
+          "description": {
+            "type": "string",
+            "example": "Description test"
+          },
+          "brand": {
+            "type": "string",
+            "example": "Brand test"
+          },
+          "license_plate": {
+            "type": "string",
+            "example": "XXX-1234"
+          },
+          "fine_amount": {
+            "type": "number",
+            "example": 120
+          },
+          "daily_rate": {
+            "type": "number",
+            "example": 200
+          },
+          "category_id": {
+            "type": "string",
+            "example": "b1202de7-9842-45e7-bed6-cf71dcd8bb17"
+          }
+        }
+      }
+  },
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  }
 }
